Fix scrollbar issue

--- a/style.css
+++ b/style.css
@@ -1,34 +1,31 @@
 :root {
   --spectro-width: 50;
   --left-fade-width: 10;
-  --right-fade-width: 5;
+  --right-fade-width: 3;
 }
 
-* {
+body, html {
   margin: 0;
   padding: 0;
-}
-
-html {
-  height: 100%;
-}
-
-body {
-  min-height: 100%;
-  width: calc(var(--spectro-width) * var(--u,1%));
-  margin: 0 auto;
   background-color: #440154;
 }
 
-#instructions {
+
+body {
+  width: calc(var(--spectro-width) * var(--u,1%));
   margin: 0 auto;
-  padding-top: 100px;
+}
+
+#instructions {
+  position: absolute;
+  left: 200px;
+  top: 200px;
   width: 500px;
   font-size: 80%;
   color: lightgrey;
 }
 
-/* #spectro {
+#spectro {
   height: 100%;
 }
 
@@ -58,4 +55,4 @@ body {
                     #440154);
   width    : calc(var(--right-fade-width) * var(--u,1%));
   height   : 100%;
-} */
+}
